--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,16 @@
-version: "3.7"
+version: '3.7'
 services:
-  node:
-    container_name: cliper_socket
-    image: node:10-alpine
-    user: "node"
-    working_dir: /home/node/app
-    environment:
-      - NODE_ENV=development
-    volumes:
-      - /home/node/app/node_modules
-      - ./:/home/node/app
-    command: "npm run start_dev"
+  nginx:
+    container_name: cliper_nginx
+    build: docker/nginx
     ports:
-      - "8082:8080"
-  redis:
-    container_name: cliper_redis
-    image: redis:alpine
-  
+      - "4000:80"
+    volumes:
+      - .:/var/www/html/app
+    links:
+      - php
+  php:
+    container_name: cliper_php
+    build: docker/php
+    volumes:
+      - .:/var/www/html/app
