--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+room_create:
+  path: /room/create
+  controller: App\Controller\RoomController::create
+  methods: GET
+go_room:
+  path: /room/go
+  controller: App\Controller\RoomController::create
+  methods: GET
